<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="@dimen/_240sdp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginHorizontal="@dimen/_10sdp"
    android:backgroundTint="@color/black_grey_200"
    app:cardCornerRadius="@dimen/_15sdp">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ivHeader"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_240sdp"
            android:contentDescription="@string/icon_point"
            android:scaleType="fitXY"
            android:src="@drawable/dummy_news" />

        <TextView
            android:id="@+id/tvSource"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="14dp"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/dummySource"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="bold" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginVertical="@dimen/_10sdp"
            android:background="@color/white" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="14dp"
            android:text="@string/dummyTitle"
            android:textColor="@color/white"
            android:layout_marginBottom="@dimen/_10sdp"
            android:textSize="20sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/tvPublishedAt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="14dp"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/dummyDate"
            android:textColor="@color/white"
            android:layout_marginBottom="@dimen/_10sdp"
            android:textSize="12sp"
            android:textStyle="bold" />
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.cardview.widget.CardView>