<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/news_navigation"
    app:startDestination="@id/homeNewsFragment">
    <fragment
        android:id="@+id/homeNewsFragment"
        android:name="com.test.newsapp.presentation.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_homeNewsFragment_to_detailNewsFragment"
            app:destination="@id/detailNewsFragment">
            <argument
                android:name="newsData"
                app:argType="com.test.newsapp.core.data.model.NewsModel" />
        </action>
        <action
            android:id="@+id/action_homeNewsFragment_to_searchNewsFragment"
            app:destination="@id/searchNewsFragment" />
    </fragment>
    <fragment
        android:id="@+id/searchNewsFragment"
        android:name="com.test.newsapp.presentation.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search">
        <action
            android:id="@+id/action_searchNewsFragment_to_detailNewsFragment"
            app:destination="@id/detailNewsFragment">
            <argument
                android:name="newsData"
                app:argType="com.test.newsapp.core.data.model.NewsModel" />
        </action>
    </fragment>
    <fragment
        android:id="@+id/detailNewsFragment"
        android:name="com.test.newsapp.presentation.detail.DetailFragment"
        android:label="@string/title_detail"
        tools:layout="@layout/fragment_detail">
        <argument
            android:name="newsData"
            app:argType="com.test.newsapp.core.data.model.NewsModel" />
    </fragment>
</navigation>