<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:paddingVertical="@dimen/_10sdp">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tvNews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dummyTitle"
            android:textColor="@color/black"
            android:layout_marginEnd="@dimen/_5sdp"
            android:layout_weight="1"
            android:fontFamily="@font/montserrat_semibold"
            android:textSize="18sp"
            />
        <ImageView
            android:id="@+id/ivNews"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_100sdp"
            tools:src="@drawable/dummy"
            android:scaleType="fitXY"
            android:contentDescription="@string/icon_point"
            android:src="@drawable/ic_search_white" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <TextView
        android:id="@+id/tvClickToDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/click_to_see_details"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:alpha="0.5"
        android:textSize="12sp" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"
        android:alpha="0.3"
        android:layout_marginTop="@dimen/_5sdp"
        />
</androidx.appcompat.widget.LinearLayoutCompat>