<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    android:orientation="vertical"
    tools:context=".presentation.search.SearchFragment">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/mainView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_collapseMode="pin">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/llcSearch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/edtSearch"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:autofillHints="no"
                        android:backgroundTint="@color/white"
                        android:fontFamily="@font/montserrat_semibold"
                        android:hint="@string/search_news"
                        android:inputType="text"
                        android:paddingVertical="@dimen/_10sdp"
                        android:textColor="@color/white"
                        android:textColorHint="@color/grey_400"
                        android:textSize="20sp" />

                    <ImageView
                        android:id="@+id/ivBack"
                        android:layout_width="@dimen/_25sdp"
                        android:layout_height="@dimen/_25sdp"
                        android:layout_gravity="center"
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:contentDescription="@string/icon_point"
                        android:src="@drawable/ic_close_white" />
                </androidx.appcompat.widget.LinearLayoutCompat>
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.appcompat.widget.Toolbar>

        <TextView
            android:id="@+id/lblCenter"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0.5"
            android:gravity="center"
            android:text="@string/find_your_topics"
            android:textColor="@color/white"
            android:textSize="28sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvSearch"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:visibility="gone"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/list_item_search" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <include
        android:id="@+id/iError"
        layout="@layout/view_error" />
</androidx.constraintlayout.widget.ConstraintLayout>