<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/primary">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/mainView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:theme="@style/Theme.NewsApp"
            app:elevation="0dp">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/collapsingToolbarLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:contentScrim="?attr/colorPrimary"
                app:expandedTitleMarginEnd="64dp"
                app:expandedTitleMarginStart="48dp"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:orientation="vertical"
                    app:layout_scrollFlags="scroll|enterAlways">

                    <ImageView
                        android:id="@+id/ivHeader"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_200sdp"
                        tools:src="@drawable/dummy_news"
                        android:scaleType="fitXY"
                        android:contentDescription="@string/icon_point" />
                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:layout_collapseMode="pin">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center">

                        <ImageView
                            android:id="@+id/ivBack"
                            android:layout_width="@dimen/_25sdp"
                            android:layout_height="@dimen/_25sdp"
                            android:layout_marginEnd="@dimen/_10sdp"
                            android:contentDescription="@string/icon_point"
                            android:src="@drawable/ic_back_white" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="@font/montserrat_bold"
                            android:text="@string/detail_news"
                            android:textColor="@color/white"
                            android:textSize="20sp" />

                    </androidx.appcompat.widget.LinearLayoutCompat>
                </androidx.appcompat.widget.Toolbar>

            </com.google.android.material.appbar.CollapsingToolbarLayout>


        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/background_round_corner"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:paddingHorizontal="10dp"
                android:paddingVertical="14dp">

                <View
                    android:layout_width="120dp"
                    android:layout_height="10dp"
                    android:alpha="0.4"
                    android:background="@drawable/rounded_view_soft_grey" />

                <TextView
                    android:id="@+id/tvTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="14dp"
                    android:layout_marginTop="14dp"
                    android:text="@string/dummyTitle"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/tvSource"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="14dp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="@string/dummySource"
                    android:textColor="@color/grey_400"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvContent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="14dp"
                    android:layout_marginTop="14dp"
                    android:text="@string/dummyTitle"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvPublishedAt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="14dp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="@string/dummyDate"
                    android:textColor="@color/grey_400"
                    android:textSize="12sp"
                    android:textStyle="bold" />
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.core.widget.NestedScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</androidx.constraintlayout.widget.ConstraintLayout>