<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.home.HomeFragment">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/mainView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:theme="@style/Theme.NewsApp"
            app:elevation="0dp">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/collapsingToolbarLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:contentScrim="?attr/colorPrimary"
                app:expandedTitleMarginEnd="64dp"
                app:expandedTitleMarginStart="48dp"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/primary"
                    android:orientation="vertical"
                    android:padding="@dimen/_10sdp"
                    app:layout_scrollFlags="scroll|enterAlways">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center">

                        <androidx.appcompat.widget.LinearLayoutCompat
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:fontFamily="@font/montserrat_bold"
                                android:text="@string/today"
                                android:textColor="@color/white"
                                android:textSize="32sp" />

                            <ImageView
                                android:id="@+id/ivToolbarSearch2"
                                android:layout_width="@dimen/_30sdp"
                                android:layout_height="@dimen/_30sdp"
                                android:layout_gravity="center"
                                android:contentDescription="@string/icon_point"
                                android:src="@drawable/ic_search_white" />
                        </androidx.appcompat.widget.LinearLayoutCompat>
                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5sdp">

                        <View
                            android:layout_width="@dimen/_100sdp"
                            android:layout_height="2dp"
                            android:background="@color/white" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="2dp"
                            android:layout_weight="1"
                            android:alpha="0.4"
                            android:background="@color/white" />
                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:id="@+id/llcHeader"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="@dimen/_15sdp"
                        android:orientation="vertical"
                        android:visibility="gone">

                        <TextView
                            android:id="@+id/tvHead"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/_40sdp"
                            android:alpha="0.7"
                            android:fontFamily="@font/montserrat_medium"
                            android:textColor="@color/white"
                            android:textSize="20sp"
                            tools:text="@string/dummyTitle" />

                        <TextView
                            android:id="@+id/tvClickToDetail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_5sdp"
                            android:layout_marginEnd="@dimen/_10sdp"
                            android:fontFamily="@font/montserrat_medium"
                            android:text="@string/click_to_see_details"
                            android:textAlignment="textEnd"
                            android:textColor="@color/white"
                            android:textSize="15sp" />

                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <com.facebook.shimmer.ShimmerFrameLayout
                        android:id="@+id/llcHeadLoading"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <androidx.appcompat.widget.LinearLayoutCompat
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginVertical="@dimen/_15sdp"
                            android:orientation="vertical">

                            <androidx.cardview.widget.CardView
                                android:layout_width="match_parent"
                                android:layout_height="15dp" />

                            <androidx.cardview.widget.CardView
                                android:layout_width="match_parent"
                                android:layout_height="15dp"
                                android:layout_marginTop="5dp" />

                            <androidx.cardview.widget.CardView
                                android:layout_width="match_parent"
                                android:layout_height="15dp"
                                android:layout_marginTop="5dp" />

                            <androidx.cardview.widget.CardView
                                android:layout_width="120dp"
                                android:layout_height="10dp"
                                android:layout_gravity="end"
                                android:layout_marginTop="5dp" />
                        </androidx.appcompat.widget.LinearLayoutCompat>
                    </com.facebook.shimmer.ShimmerFrameLayout>

                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:visibility="gone"
                    app:layout_collapseMode="pin">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        >

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="@font/montserrat_bold"
                            android:text="@string/app_name"
                            android:textColor="@color/white"
                            android:textSize="32sp" />

                        <ImageView
                            android:id="@+id/ivToolbarSearch"
                            android:layout_width="@dimen/_30sdp"
                            android:layout_height="@dimen/_30sdp"
                            android:layout_marginEnd="@dimen/_10sdp"
                            android:contentDescription="@string/icon_point"
                            android:src="@drawable/ic_search_white" />
                    </androidx.appcompat.widget.LinearLayoutCompat>
                </androidx.appcompat.widget.Toolbar>

            </com.google.android.material.appbar.CollapsingToolbarLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingHorizontal="@dimen/_13sdp"
                android:paddingVertical="@dimen/_15sdp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_semibold"
                    android:text="@string/recent"
                    android:textColor="@color/black"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvHome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/list_item_home" />
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.core.widget.NestedScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <include
        android:id="@+id/iError"
        layout="@layout/view_error" />
</androidx.constraintlayout.widget.ConstraintLayout>